Compiler/tests/bad/comments.nx
// Isto vai mostrar no ecra 1 (*

Porque e que isto nao fica verde?

eu fiz o '(*'

*)